@@ -8,6 +8,7 @@
 	  added support for tracker groups; new option --dht-bootstrap
 	  for manual bootstrapping.
 	* ftp-opie.c: use newer version from wget (fixes a bug on 64-bit hw).
+	* xstring.cc, xstring.h: (hex_decode) new method.
 
 2012-08-15  Alexander V. Lukyanov <lav@yars.free.net>
 
